# Couting_Stars

./: .env  .gitignore  .~lock.README.docx#  README.docx  main.py  main_old.py  makefile  pyproject.toml  readMe.md  read_text.py  test.py
app/: __init__.py  countMeteors.py  countMeteors_old.py  countStars.py  readText.py  recursiveFunctions.py
